# agent-loom

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
docs/: architecture.md  blog-post.md  image-prompts.md  launch-kit.md
examples/: summarize.py
src/agentloom/: __init__.py  cli.py  core.py  tracer.py
src/agentloom/integrations/: langchain.py
tests/: test_core.py  test_integration.py  test_langchain_integration.py
